@@ -1,3 +1,9 @@
+Mon Jan 26 20:33:31 2004  Tao Lu  <lu@dre.vanderbilt.edu>
+
+	* examples/Hello/step-by-step.html:
+
+	Updated this file with new font.
+
 Fri Jan 23 10:36:27 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>
 
 	* CCF/CCF/CCF.sln:
@@ -8,7 +14,7 @@ Fri Jan 23 10:36:27 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>
 	* CCF/CCF/IDL3/IDL3.vcproj:
 
 	  Updated projects to compile with boost out-of-the-box.
-	
+
 	* CCF/Documentation/Build.html:
 
 	  Added step-by-step instructions for building CCF on
